--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,28 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BancAndes</title>
+    <title>LOG IN BancAndes</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
     <div class="container mx-auto w-50"> <!-- Ajustado el ancho para mejor visualización -->
-        <h1 class="text-center my-3">BancAndes</h1> <!-- Agregado centrado y margen -->
+        <h1 class="text-center my-3">LOG IN BancAndes</h1> <!-- Agregado centrado y margen -->
         <img th:src="@{/images/logo.png}" class="d-block mx-auto" width="250" alt="BancAndes Logo"/> <!-- Centrado de imagen -->
 
         <!-- Navegación Principal -->
         <div class="d-flex flex-wrap justify-content-center"> <!-- Flexbox para mejor disposición de los botones -->
-            <a th:href="@{/clientes}" class="btn btn-primary m-2">Clientes</a>
-            <a th:href="@{/cuentas}" class="btn btn-primary m-2">Cuentas</a>
-            <a th:href="@{/pas}" class="btn btn-primary m-2">Puntos de Atención</a>
-            <a th:href="@{/obcs}" class="btn btn-primary m-2">Operaciones Bancarias</a>
-            <a th:href="@{/empleados}" class="btn btn-primary m-2">Empleados</a>
-            <a th:href="@{/transferencias}" class="btn btn-primary m-2">Transferencias</a>
-            <a th:href="@{/prestamos}" class="btn btn-primary m-2">Préstamos</a>
-            <a th:href="@{/oficinas}" class="btn btn-primary m-2">Oficinas</a>
-            <a th:href="@{/obps}" class="btn btn-primary m-2">Operaciones Préstamos</a>
-            <!-- Asegúrate de que estos enlaces llevan a destinos únicos -->
-            <a th:href="@{/obcs/iso}" class="btn btn-primary m-2">Operaciones Cuenta ISO</a>
-            <a th:href="@{/obcs/iso/rc}" class="btn btn-primary m-2">Rec. Cuenta ISO</a>
+            <a th:href="@{/clientes/menu}" class="btn btn-secondary">Clientes</a>
+            <div></div>
+            <br>
+            <a th:href="@{/empleados/menu}" class="btn btn-secondary">Empleados</a>
         </div>
     </div>
 </body>
